<resources>
    <string name="app_name">Happy Places</string>
    <string name="edit_text_hint_title">Title</string>
    <string name="edit_text_hint_description">Description</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="edit_text_hint_location">Location</string>
    <string name="text_add_image">ADD IMAGE</string>
    <string name="btn_text_save">SAVE</string>
    <string name="no_text_no_happy_places_found_yet">No happy places found yet, kindly add one</string>
    <string name="image_content_description">image</string>
    <string name="google_maps_api_key">AIzaSyCxpRDJZPtxliovJtG4X3NnNlvlVnU39TM</string>
    <string name="btn_text_view_on_map">VIEW ON MAP</string>
    <string name="add_place_select_current_location_text">SELECT CURRENT LOCATION</string>
</resources>